<resources>
    <string name="app_name">El Templo de Momo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="noticias">Noticias</string>
    <string name="logout">Logout</string>
    <string name="perfil">Perfil</string>
    <string name="comentarios">Comentarios</string>
    <string name="noticia">Noticia</string>
    <string name="juego">Juego</string>
    <string name="juegos">Juegos</string>
    <string name="fecha">Fecha</string>
    <string name="titulo">Titulo</string>
    <string name="logo_de_la_aplicaci_n">logo de la aplicación</string>
    <string name="mail">Mail</string>
    <string name="contrasenia">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="portada_del_juego">Portada del juego</string>
    <string name="precio">Precio</string>
    <string name="descripci_n">Descripción</string>
    <string name="requisitos">Requisitos</string>
    <string name="creador">Creador</string>
    <string name="nickname">NickName</string>
    <string name="nombre">Nombre</string>
    <string name="e_mail">E-mail</string>
    <string name="apellido">Apellido</string>
    <string name="editar">Editar</string>
    <string name="avatar_del_creador">Avatar del Creador</string>
    <string name="cuerpo">Cuerpo</string>
    <string name="crear">Crear</string>
    <string name="crear_juego">Crear Juego</string>
    <string name="cargar_imagen">Cargar Imagen</string>
    <string name="avatar_usuario">avatar usuario</string>
    <string name="usuario">Usuario</string>
    <string name="crear_noticia">Crear Noticia</string>
    <string name="logo">Logo</string>
    <string name="icono">Icono</string>
</resources>