<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil_3"
            android:title="@string/perfil"/>
        <item
            android:id="@+id/nav_juego"
            android:icon="@drawable/ic_juegos"
            android:title="@string/juegos" />
        <item
            android:id="@+id/nav_juegoCrear"
            android:icon="@drawable/ic_crear_juego"
            android:title="@string/crear_juego"/>
        <item
            android:id="@+id/nav_noticiaJuego"
            android:icon="@drawable/ic_noticias"
            android:title="@string/noticias" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>