<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".ui.noticia.NoticiaDetalleFragment">

    <TextView
        android:id="@+id/tvFechaND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#B3FBFBFB"
        android:text="@string/fecha"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvTituloND"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:autofillHints="yes"
        android:background="#B3FBFBFB"
        android:enabled="false"
        android:hint="@string/titulo"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/tvCuerpoND"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:enabled="false"
        android:background="#B3FBFBFB"
        android:hint="@string/cuerpo"
        android:textColor="#000000"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloND"
        tools:ignore="TextContrastCheck"
        android:autofillHints="yes" />

    <TextView
        android:id="@+id/tvCreadorND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/creador"
        android:textColor="#000000"
        android:background="#B3FBFBFB"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCuerpoND" />

    <Button
        android:id="@+id/btComentND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#B81313"
        android:text="@string/comentarios"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:icon="@drawable/ic_comentario"
        app:iconGravity="textTop"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreadorND"
        app:strokeColor="#00FF0C"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/btEditarNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#FFD300"
        android:text="@string/editar"
        android:textColor="#000000"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        android:drawableTop="@drawable/ic_editar_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreadorND"
        app:strokeColor="#00FF0C"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/tvIdNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>