<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/momo1"
    tools:context=".Login">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/logo_de_la_aplicaci_n" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="312dp"
        android:layout_height="73dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFA000"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="#FFA000"
        android:textColorHint="#FFA000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogin"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="yes"
        android:autofillHints="yes" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="312dp"
        android:layout_height="73dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFA000"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:textColor="#FFA000"
        android:textColorHighlight="#FFA000"
        android:textColorHint="#FFA000"
        android:textColorLink="#0097A7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMail"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="yes" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="183dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#02710D"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:icon="@drawable/ic_login"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMensaje" />

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="El Mail o Contraseña son incorrectos o Usuario no registrado"
        android:textAlignment="center"
        android:textColor="#FC0202"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="HardcodedText" />

    <ProgressBar
        android:id="@+id/pbLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="28dp"
        android:background="#B3FBFBFB"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>